| Bug #21855 | Compilation error in ha_innodb.cc | ||
|---|---|---|---|
| Submitted: | 27 Aug 2006 22:42 | Modified: | 13 Sep 2006 17:50 |
| Reporter: | Bob Field | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S3 (Non-critical) |
| Version: | 5.1 BK | OS: | Linux (Linux) |
| Assigned to: | Magnus BlÄudd | CPU Architecture: | Any |
[27 Aug 2006 22:42]
Bob Field
[28 Aug 2006 10:18]
Sveta Smirnova
Verified on Linux as described
[28 Aug 2006 10:20]
Sveta Smirnova
Thank you for the report. Verified using last 5.1-BK sources.
[28 Aug 2006 23:29]
Bob Field
It appears that this error is being thrown because SIZEOF_VOIDP is not defined. In 5.0 this was getting defined in ib_config.h, which is in turn created by the InnoDB configure script.
[29 Aug 2006 1:23]
Bob Field
File storage/innobase/configure.in is missing from the 5.1 BK pull.
[29 Aug 2006 12:46]
Guilhem Bichot
Hi, got it too, today. Until it is fixed, try adding --with-innodb to your configure line (please post here if it helped). Thanks!
[29 Aug 2006 20:18]
Bob Field
Adding --with-innodb does indeed give me a successful build of 5.1-BK. I'm still not getting a good build of 5.2-BK with or without the --with-innodb option. Does that falls within the realm of Bug #21642, now moved to 5.2, or should I file a new bug report?
[29 Aug 2006 20:35]
Sveta Smirnova
Thank you, Bob, for the feedback. If your problems with 5.2-BK are similar to Bug #21642, simple add comment there. Otherwise you can file a new bug report.
[30 Aug 2006 7:59]
Guilhem Bichot
Hello, The problems in 5.2 are still probably BUG#21642. I don't think you need to file a new bug report.
[1 Sep 2006 8:38]
Sveta Smirnova
With today updated sources when I try to compile with --with-innodb option I get error: .... make[5]: Entering directory `/users/ssmirnova/mysql-5.1f/storage/innobase/os' make[5]: *** No rule to make target `../config/ac-macros/alloca.m4', needed by `Makefile.in'. Stop.
[1 Sep 2006 15:09]
Bob Field
From a BK pull of 5.2 this morning I get a similar error: make[3]: Entering directory `/usr/local/home/bob/mysql/5.2/storage/innobase' make[3]: *** No rule to make target `@MAINTAINER_MODE_TRUE@', needed by `Makefile.in'. Stop.
[8 Sep 2006 13:41]
Guilhem Bichot
if you have an old storage/innobase/configure but have no storage/innobase/configure.in, try removing storage/innobase/configure and rebuild, and please report here if it helps.
[8 Sep 2006 13:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11618 ChangeSet@1.2310, 2006-09-08 15:42:49+02:00, msvensson@shellback.(none) +1 -0 Bug#21855 Compilation error in ha_innodb.cc - Add ifdefs in ha_innodb.cc so it's only compiled if we have selected to build mysqld with innodb. This is inline with how it's done in other handlers.
[13 Sep 2006 8:54]
Timothy Smith
Pushed to 5.1.12
[13 Sep 2006 17:50]
Paul DuBois
No changelog entry needed.
