Bug#21855 Compilation error in ha_innodb.cc  - Add ifdefs in ha_innodb.cc so it's only compiled if we have selected to build mysqld with innodb.    This is inline with how it's done in other handlers.